# PANEL

./: .gitignore  .isort.cfg  Dockerfile  celerybeat-schedule  docker-compose.yml  gunicorn.py  manage.py  pyproject.toml  test.py  tt.py
.github/workflows/: master.yml
PANEL/: __init__.py  api.py  asgi.py  celery_conf.py  consumer.py  redis_conf.py  security.py  settings.py  storage.py  urls.py  ws_routing.py  wsgi.py
app/P2P/fake_check/: api.py  apps.py
app/abstractions/: admin.py  apps.py  models.py  preview.py
app/frontend/: api.py  models.py  twofa_state.py  urls.py  views.py
app/frontend/migrations/: 0001_initial.py  0002_alter_customuser_totp_secret.py
app/frontend/routes/: gpt.py  monitoring.py
app/frontend/schemas/: gpt.py
app/order/: admin.py  apps.py  models.py  schemas.py
app/order/migrations/: 0001_initial.py  0002_orderhistorymodel.py  0003_ordermodel_accumulated_funding.py  0004_ordercreditingmodel.py  0005_alter_ordermodel_uuid.py  0006_alter_ordermodel_accumulated_funding.py  0007_ordermodel_target_rate_alter_ordermodel_category_and_more.py  0008_ordermodel_close_rate.py  0009_ordermodel_close_at.py  0010_ordermodel_close_kline_ms.py  0011_ordermodel_open_kline_ms_and_more.py
app/order/routes/: base.py  crediting.py  extremum.py  statistic.py  status.py
app/order/schemas/: base.py  crediting.py  statistic.py  status.py
app/order/service/: base.py  funding.py  status.py
app/order/signals/: crediting.py  history.py  order_change.py  profit.py
app/position/: admin.py  apps.py  models.py
app/position/migrations/: 0001_initial.py  0002_alter_positionmodel_options_positionmodel_category_and_more.py  0003_rename_create_on_positionmodel_created_at_and_more.py  0004_alter_positionmodel_uuid.py  0005_positionmodel_qty_tokens.py  0006_alter_positionmodel_status.py  0007_alter_positionmodel_uuid.py  0008_positionmodel_kline_ms.py  0009_positionmodel_dt_end.py  0010_rename_dt_end_positionmodel_close_at.py
app/position/routes/: base.py  position.py  status.py
app/position/schemas/: base.py  position.py  status.py
app/position/service/: base.py  position.py  status.py  status_handlers.py
app/position/signals/: position_change.py
app/setting/: admin.py  apps.py  models.py
app/setting/migrations/: 0001_initial.py  0002_rename_create_on_bansymbolmodel_created_at_and_more.py  0003_symbolmodel_qty.py  0005_exchangemodel.py  (+8 more)
app/sockets/: apps.py  consumers.py  urls.py
app/tasks/: analiz.py  tasks.py
app/users/: admin.py  api.py  apps.py  models.py  schema.py  service.py
app/utils/: rabbit.py  response.py  serializer.py
consumers/: gpt.py  kline.py  monitoring.py  orderbook.py  signals.py  trade_update.py
consumers/signals/: macd.py  rsi.py
static/css/: admin_order.css  indicator.css  orders_modal.css
static/js/: admin_order_extremum.js  admin_order_init.js  admin_order_lifetime.js  admin_order_live_info.js  admin_order_ws.js  indicator_candles.js  indicator_chart.js  indicator_rsi.js  orders_modal.js
templates/admin/: app_list.html  base_site.html
templates/html/: base_indicator.html  change_list.html  documentation.html  indicator_candles.html  indicator_chart.html  indicator_rsi.html  login.html  two_factor.html
(+155 files in other folders)
