[tool.poetry]
name = "panel"
version = "0.1.0"
description = ""
authors = ["Professional <pyostr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2.7"
pika = "^1.3.2"
redis = "^6.4.0"
pymysql = "^1.1.2"
pytelegrambotapi = "^4.29.1"
python-dotenv = "^1.1.1"
django-storages = "^1.14.6"
celery = "^5.5.3"
django-ninja = "^1.4.3"
django-ninja-extra = "^0.30.1"
cryptography = "^46.0.2"
gunicorn = "^23.0.0"
django-json-widget = "^2.0.4"
qrcode = "^8.2"
phonenumbers = "^9.0.16"
pillow = "^11.3.0"
django-cors-headers = "^4.9.0"
asgiref = "^3.10.0"
channels-redis = "^4.3.0"
pybit = "^5.12.0"
daphne = "^4.2.1"
pandas = "^2.3.3"
pymupdf = "^1.26.5"
django-celery-beat = "^2.8.1"
django-fsm-admin2 = "^0.1.3"
boto3 = "^1.40.52"
django-grappelli = "^4.0.2"
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
