[project]
name = "panel"
version = "0.1.0"
description = ""
authors = [
    {name = "www",email = "pyostr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-ninja (>=1.4.5,<2.0.0)",
    "django-ninja-extra (>=0.30.2,<0.31.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-json-widget (>=2.0.4,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "asgiref (>=3.10.0,<4.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "pybit (>=5.12.0,<6.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "boto3 (>=1.40.55,<2.0.0)",
    "django-grappelli (>=4.0.2,<5.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "qrcode (>=8.2,<9.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "django-fsm-admin2 (>=0.1.3,<0.2.0)",
    "infisicalsdk (>=1.0.13,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
